# goat_cart_mqp

./: .gitignore  README.md  default.xml  fast-quadrature.ino  webcams.gpfl
Calib/: .cproject  main.cpp  stereo_calib.xml
Calib/data/: stereo_calib.xml
RoboCartUtils/: .cproject  MonoVidStream.cpp  OccupancyGrid.cpp  OccupancyGrid.hpp  StereoVidStream.cpp  StereoVision.cpp  StereoVision.hpp  VidStream.hpp  types.hpp
computer-vision/: .cproject  CMakeLists.txt  StereoVision.cpp  StereoVision.hpp  VidStream.cpp  VidStream.hpp  build.sh  extrinsics.yml  main.cpp  params.yml  settings.hpp
cpp_code/: .gitignore
cpp_code/Calib/: .project  main.cpp
cpp_code/RoboCartUtils/: .cproject  .project  StereoVidStream.cpp  StereoVision.hpp  VidStream.hpp
cpp_code/computer-vision/: .project  intrinsics.yml  main.cpp  params2.yml
cpp_code/opencv-test/: CMakeLists.txt  VidStream.hpp  main.cpp  params.yml
cpp_code/stereo-capture/: .gitignore  .project  main.cpp
cpp_code/stereo-test/: VidStream.cpp  VidStream.hpp  defaults.h  main.cpp  params.yml
docs/: Gemfile  _config.yml  about.md
docs/_posts/: 2017-03-10-welcome-to-jekyll.markdown  2017-03-27-architecture.md
opencv-python/: .gitignore  main.py  main_old.py  params.json  test.py
opencv-python/control/: gui.py  (+7 more)
opencv-test/: CMakeLists.txt  VidStream.cpp  VidStream.hpp  defaults.h  main.cpp  params.yml  settings.hpp  test.sh
raspberry-pi/: digipot.py  digipot_tester.py
stereo-capture/: .cproject  main.cpp  params.yml
stereo-test/: CMakeLists.txt  VidStream.cpp  VidStream.hpp  main.cpp  params.yml  test.sh
(+6 files in other folders)
